--- a/CornettBlogSite/Pages/Index.razor
+++ b/CornettBlogSite/Pages/Index.razor
@@ -2,8 +2,15 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>What's Up with this Ian Cornett guy?</h1>
 
-Welcome to your new app.
+Welcome to my website and blog!  My name is Ian Cornett, and I'm a 
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+
+@code {
+
+    int yearsOld = new int();
+    
+
+}
