--- a/CornettBlogSite/Areas/Identity/Pages/Account/LogOut.cshtml
+++ b/CornettBlogSite/Areas/Identity/Pages/Account/LogOut.cshtml
@@ -2,13 +2,10 @@
 @using Microsoft.AspNetCore.Identity
 @attribute [IgnoreAntiforgeryToken]
 @inject SignInManager<IdentityUser> SignInManager
+
 @functions {
-    public async Task<IActionResult> OnPost()
-    {
-        if (SignInManager.IsSignedIn(User))
-        {
-            await SignInManager.SignOutAsync();
-        }
+    public async Task<IActionResult> OnPost() {
+        if (SignInManager.IsSignedIn(User)) { await SignInManager.SignOutAsync(); }
 
         return Redirect("~/");
     }
